Cleanup dependencies